--- a/css/main.css
+++ b/css/main.css
@@ -269,7 +269,7 @@ summary {
   margin-left: auto;
 }
 
-.list-example__item, .portfolio__item {
+.list-example__item {
   margin-left: 30px;
   margin-top: 30px;
   flex-basis: calc((100% - 3 * 30px) / 3);
@@ -350,7 +350,6 @@ img {
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
-  background-color: red;
 }
 
 @media screen and (min-width: 480px) {
@@ -358,21 +357,18 @@ img {
     max-width: 480px;
     margin-right: auto;
     margin-left: auto;
-    background-color: orangered;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
-    background-color: yellow;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .container {
     max-width: 1200px;
-    background-color: green;
   }
 }
 
@@ -770,14 +766,26 @@ img {
 .logo-list {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
+}
+
+@media screen and (min-width: 480px) {
+  .logo-list {
+    margin-left: -30px;
+    margin-top: -30px;
+  }
 }
 
 .logo-list__item {
-  margin-left: 30px;
+  flex-basis: 100%;
   margin-top: 30px;
-  flex-basis: calc((100% - 2 * 30px) / 2);
+}
+
+@media screen and (min-width: 480px) and (max-width: 767.98px) {
+  .logo-list__item {
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc((100% - 2 * 30px) / 2);
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -832,18 +840,36 @@ img {
 
 .footer .container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .footer .container {
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
+    padding-left: 80px;
+    padding-right: 80px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer .container {
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
   }
 }
 
 .box-address {
   flex-shrink: 0;
+  text-align: center;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .box-address {
+    text-align: left;
+  }
 }
 
 .address {
@@ -873,7 +899,20 @@ img {
 }
 
 .box-social {
-  margin-left: 70px;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  .box-social {
+    margin-left: 165px;
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .box-social {
+    margin-left: 70px;
+  }
 }
 
 .footer-social {
@@ -929,8 +968,13 @@ img {
 }
 
 .box-subscribe {
-  margin-left: 90px;
-  width: 590px;
+  width: 100%;
+}
+
+@media screen and (min-width: 1200px) {
+  .box-subscribe {
+    margin-left: 90px;
+  }
 }
 
 .form-subscribe {
@@ -948,7 +992,7 @@ img {
 
 .form-subscripe__field {
   background-color: transparent;
-  width: 450px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
@@ -959,11 +1003,13 @@ img {
   color: var(--primary-white-color);
   outline: none;
   padding-left: 16px;
+  margin-bottom: 20px;
+  max-width: 450px;
 }
 
 @media screen and (min-width: 1200px) {
   .form-subscripe__field {
-    width: 358px;
+    max-width: 358px;
     display: inlie-block;
   }
 }
@@ -985,11 +1031,27 @@ img {
 
 .filter {
   display: flex;
-  justify-content: center;
+}
+
+@media screen and (max-width: 767px) {
+  .filter {
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filter {
+    justify-content: center;
+  }
 }
 
 .filter--margin {
   margin-bottom: 50px;
+}
+
+.filter__item {
+  margin-top: 15px;
 }
 
 .filter__item:not(:last-child) {
@@ -1020,6 +1082,23 @@ img {
 
 .portfolio__item {
   background: var(--primary-white-color);
+  flex-basis: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio__item {
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc((100% - 2 * 30px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio__item {
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc((100% - 3 * 30px) / 3);
+  }
 }
 
 .portfolio__link {
