--- a/sass/layouts/_clients-logo.scss
+++ b/sass/layouts/_clients-logo.scss
@@ -1,12 +1,19 @@
 .logo-list {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
+  @media screen and (min-width: 480px) {
+    margin-left: -30px;
+    margin-top: -30px;
+  }
 }
 
 .logo-list__item {
-  @include calcFor(2);
+  flex-basis: 100%;
+  margin-top: 30px;
+
+  @media screen and (min-width: 480px) and (max-width: 767.98px) {
+    @include calcFor(2);
+  }
 
   @media screen and (min-width: 768px) {
     @include calcFor(3);
