--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -6,15 +6,28 @@
 
 .footer .container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 
-  @media screen and (min-width: 1200px) {
-    flex-wrap: nowrap;
+  @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+    flex-wrap: wrap;
+    padding-left: 80px;
+    padding-right: 80px;
+  }
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
   }
 }
 .box-address {
   flex-shrink: 0;
+  text-align: center;
+  margin-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    text-align: left;
+  }
 }
 .address {
   font-style: inherit;
@@ -37,7 +50,16 @@
   color: var(--primary-white-color);
 }
 .box-social {
-  margin-left: 70px;
+  margin-bottom: 60px;
+
+  @media screen and (min-width: 768px) {
+    margin-left: 165px;
+    margin-bottom: 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-left: 70px;
+  }
 }
 .footer-social {
   display: flex;
@@ -87,8 +109,11 @@
 }
 
 .box-subscribe {
-  margin-left: 90px;
-  width: 590px;
+  width: 100%;
+
+  @media screen and (min-width: 1200px) {
+    margin-left: 90px;
+  }
 }
 
 .form-subscribe {
@@ -104,7 +129,7 @@
 
 .form-subscripe__field {
   background-color: transparent;
-  width: 450px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
@@ -116,8 +141,11 @@
   color: var(--primary-white-color);
   outline: none;
   padding-left: 16px;
+  margin-bottom: 20px;
+  max-width: 450px;
+
   @media screen and (min-width: 1200px) {
-    width: 358px;
+    max-width: 358px;
     display: inlie-block;
   }
 }
