hw-8-almost-over

--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -3,7 +3,11 @@
   align-items: center;
 }
 .site-nav {
-  display: flex;
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
 }
 .site-nav__item:not(:last-child) {
   margin-right: 50px;
