--- a/css/main.css
+++ b/css/main.css
@@ -283,7 +283,6 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
-  outline: 1px solid red;
 }
 
 body {
@@ -392,13 +391,35 @@ img {
   height: 100%;
 }
 
-.page-header__logo {
-  margin-right: 93px;
+@media screen and (min-width: 768px) {
+  .page-header__logo {
+    margin-right: 88px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .page-header__logo {
+    margin-right: 93px;
+  }
 }
 
 .page-header .link {
-  padding-top: 24px;
-  padding-bottom: 25px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .page-header .link {
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .page-header .link {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
 }
 
 .nav {
@@ -407,7 +428,13 @@ img {
 }
 
 .site-nav {
-  display: flex;
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav {
+    display: flex;
+  }
 }
 
 .site-nav__item:not(:last-child) {
@@ -448,9 +475,15 @@ img {
   color: var(--accent-color);
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+  }
 }
 
 .logo__word--black {
@@ -519,7 +552,15 @@ img {
 }
 
 .contact {
-  display: flex;
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .contact {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 84px;
+  }
 }
 
 .contact__item:not(:last-child) {
@@ -547,16 +588,29 @@ img {
   fill: currentColor;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contact__link.link {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+}
+
 .hero__title {
   font-family: var(--main-font-family);
   font-weight: 900;
-  font-size: 44px;
+  font-size: 26px;
   line-height: 1.36;
   text-transform: uppercase;
   text-align: center;
   letter-spacing: 0.06em;
   color: var(--primary-white-color);
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+  }
 }
 
 .section__title {
@@ -614,6 +668,135 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 100%;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--primary-white-color);
+  display: flex;
+  flex-direction: column;
+  z-index: 99;
+  padding: 48px 40px;
+}
+
+.mobile-menu.is-open {
+  left: 0;
+}
+
+.mobile-site-nav {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17px;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+}
+
+.mobile-site-nav .mobile-site-nav__item:not(:last-child) {
+  padding-bottom: 32px;
+}
+
+.mobile-contact {
+  margin-top: auto;
+  margin-bottom: 64px;
+}
+
+.mobile-contact__item .contact__link {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.mobile-item-email {
+  margin-top: 32px;
+}
+
+.mobile-item-phone {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+.mobile-item-phone .link {
+  color: inherit;
+}
+
+.mobile-item-email {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+}
+
+.mobile-social__list {
+  display: flex;
+}
+
+.mobile-social__item {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+  padding: 0 10px;
+  justify-content: flex-start;
+}
+
+.mobile-social__item:first-child {
+  padding-left: 0;
+}
+
+.mobile-social__item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mobile-social__item .link {
+  color: inherit;
+}
+
+.mobile-menu__btn {
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  top: 10px;
+  right: 15px;
+  z-index: 100;
+}
+
+.mobile-menu__btn.is-open {
+  position: static;
+}
+
+.mobile-menu__btn:hover .mobile-menu__icon,
+.mobile-menu__btn:focus .mobile-menu__icon {
+  fill: var(--accent-color);
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu__btn {
+    display: none;
+  }
+}
+
+.mobile-menu__icon-menu {
+  display: none;
+}
+
+.mobile-menu__btn.is-open .mobile-menu__icon-menu {
+  display: block;
+}
+
+.mobile-menu__btn.is-open .mobile-menu__icon-close {
+  display: none;
+}
+
 .hero {
   background-color: var(--secondary-bg-color);
   max-width: 1600px;
@@ -628,8 +811,15 @@ img {
   flex-direction: column;
   justify-content: center;
   height: 100%;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero .container {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .hero__button {
@@ -1166,12 +1356,18 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 530px;
+  width: 450px;
   background-color: var(--primary-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 530px;
+  }
 }
 
 .box-close {
@@ -1228,13 +1424,19 @@ img {
 }
 
 .modal__field {
-  width: 448px;
+  width: 370px;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
   margin-bottom: 10px;
   padding-left: 42px;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__field {
+    width: 448px;
+  }
 }
 
 .modal__field:focus, .modal__field:focus {
@@ -1264,12 +1466,18 @@ img {
   box-sizing: border-box;
   resize: none;
   padding: 12px 16px;
-  width: 448px;
+  width: 370px;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .feedback-field {
+    width: 448px;
+  }
 }
 
 .box-checkbox {
@@ -1280,11 +1488,19 @@ img {
 
 .checkbox-label {
   display: flex;
+  flex-wrap: nowrap;
   align-items: center;
   margin-bottom: 30px;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+  .checkbox-label {
+    font-size: 14px;
+    line-height: 1.17;
+  }
 }
 
 .checkbox-label::before {
@@ -1310,6 +1526,15 @@ img {
 .checkbox-link {
   color: var(--accent-color);
   margin-left: 5px;
+  font-size: 12px;
+  line-height: 1.17;
+}
+
+@media screen and (min-width: 1200px) {
+  .checkbox-link {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .box-form .btn-actions {
