--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -1,5 +1,11 @@
 .contact {
-  display: flex;
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 84px;
+  }
 }
 .contact__item:not(:last-child) {
   margin-right: 50px;
@@ -22,4 +28,10 @@
   display: inline-flex;
   margin-right: 10px;
   fill: currentColor;
+}
+.contact__link.link {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
 }
