--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,9 +2,13 @@
   color: var(--accent-color);
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+  }
 }
 
 .logo__word--black {
