--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -20,8 +20,13 @@
   flex-direction: column;
   justify-content: center;
   height: 100%;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 .hero__button {
   padding: 10px 32px;
