--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -21,7 +21,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 530px;
+  width: 450px;
   background-color: var(--primary-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -29,6 +29,10 @@
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 1200px) {
+    width: 530px;
+  }
 }
 .box-close {
   position: absolute;
@@ -83,13 +87,17 @@
 }
 
 .modal__field {
-  width: 448px;
+  width: 370px;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
   margin-bottom: 10px;
   padding-left: 42px;
+
+  @media screen and (min-width: 1200px) {
+    width: 448px;
+  }
 
   &:focus,
   &:focus {
@@ -122,14 +130,17 @@
   box-sizing: border-box;
   resize: none;
   padding: 12px 16px;
-  width: 448px;
+  width: 370px;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
   margin-bottom: 20px;
-}
 
+  @media screen and (min-width: 1200px) {
+    width: 448px;
+  }
+}
 .box-checkbox {
   display: inline-block;
   width: 100%;
@@ -137,11 +148,17 @@
 }
 .checkbox-label {
   display: flex;
+  flex-wrap: nowrap;
   align-items: center;
   margin-bottom: 30px;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.17;
+  }
 
   &::before {
     display: inline-block;
@@ -166,6 +183,13 @@
 .checkbox-link {
   color: var(--accent-color);
   margin-left: 5px;
+  font-size: 12px;
+  line-height: 1.17;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .box-form .btn-actions {
   padding: 10px 55px;
