--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -6,10 +6,58 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url('../images/bg-hero.jpg');
+    url('../images/mobile/hero/hero.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(
+        to top left,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url('../images/tablet/hero/hero.jpg');
+  }
+
+  @media screen and (min-width: 1200px) {
+    background-image: linear-gradient(
+        to top left,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url('../images/desktop/hero/hero.jpg');
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        to top left,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url('../images/mobile/hero/hero@2x.jpg');
+
+    @media screen and (min-width: 768px) {
+      background-image: linear-gradient(
+          to top left,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url('../images/tablet/hero/hero@2x.jpg');
+    }
+
+    @media screen and (min-width: 1200px) {
+      background-image: linear-gradient(
+          to top left,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url('../images/desktop/hero/hero@2x.jpg');
+    }
+  }
 }
 
 .hero--centre {
