--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -54,6 +54,10 @@
     @include calcFor(3);
   }
 }
+.portfolio__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
 .portfolio__link {
   display: block;
   border: 1px solid #eeeeee;
