--- a/css/main.css
+++ b/css/main.css
@@ -736,7 +736,7 @@ img {
 
 .mobile-social__item {
   font-weight: 500;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.22;
   letter-spacing: 0.02em;
   color: var(--accent-color);
@@ -806,13 +806,13 @@ img {
   background-size: cover;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 481px) {
   .hero {
     background-image: linear-gradient(to top left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/tablet/hero/hero.jpg");
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 769px) {
   .hero {
     background-image: linear-gradient(to top left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/desktop/hero/hero.jpg");
   }
@@ -1396,12 +1396,18 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 450px;
+  width: 100%;
   background-color: var(--primary-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1464,13 +1470,19 @@ img {
 }
 
 .modal__field {
-  width: 370px;
+  width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
   margin-bottom: 10px;
   padding-left: 42px;
+}
+
+@media screen and (min-width: 480px) {
+  .modal__field {
+    width: 370px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1506,12 +1518,18 @@ img {
   box-sizing: border-box;
   resize: none;
   padding: 12px 16px;
-  width: 370px;
+  width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 480px) {
+  .feedback-field {
+    width: 370px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
