--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -21,7 +21,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 450px;
+  width: 100%;
   background-color: var(--primary-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -29,6 +29,10 @@
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
 
   @media screen and (min-width: 1200px) {
     width: 530px;
@@ -87,13 +91,17 @@
 }
 
 .modal__field {
-  width: 370px;
+  width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
   margin-bottom: 10px;
   padding-left: 42px;
+
+  @media screen and (min-width: 480px) {
+    width: 370px;
+  }
 
   @media screen and (min-width: 1200px) {
     width: 448px;
@@ -130,12 +138,16 @@
   box-sizing: border-box;
   resize: none;
   padding: 12px 16px;
-  width: 370px;
+  width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
   margin-bottom: 20px;
+
+  @media screen and (min-width: 480px) {
+    width: 370px;
+  }
 
   @media screen and (min-width: 1200px) {
     width: 448px;
