--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -27,6 +27,7 @@
 
   @media screen and (min-width: 1200px) {
     text-align: left;
+    margin-bottom: 0;
   }
 }
 .address {
@@ -124,6 +125,7 @@
   @media screen and (min-width: 1200px) {
     flex-direction: row;
     justify-content: space-between;
+    align-items: flex-start;
   }
 }
 
