--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -21,9 +21,9 @@
   justify-content: center;
   align-items: center;
 
-  @media screen and (min-width: 1200px) {
-    display: inline-flex;
-  }
+  // @media screen and (min-width: 1200px) {
+  //   display: inline-flex;
+  // }
 
   .btn-actions__icon-send {
     width: 24px;
