--- a/css/main.css
+++ b/css/main.css
@@ -662,6 +662,11 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.box-mobile-menu {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .mobile-menu {
   position: fixed;
   top: 0;
@@ -679,7 +684,11 @@ img {
   left: 0;
 }
 
-.mobile-site-nav {
+.mobile-site-nav__item:not(:last-child) {
+  padding-bottom: 32px;
+}
+
+.mobile-menu__link {
   font-weight: 500;
   font-size: 40px;
   line-height: 1.17px;
@@ -687,8 +696,9 @@ img {
   color: var(--title-text-color);
 }
 
-.mobile-site-nav .mobile-site-nav__item:not(:last-child) {
-  padding-bottom: 32px;
+.mobile-menu__link:hover,
+.mobile-menu__link:focus {
+  color: var(--accent-color);
 }
 
 .mobile-contact {
@@ -758,9 +768,6 @@ img {
   cursor: pointer;
   margin: 0;
   padding: 0;
-  position: fixed;
-  top: 10px;
-  right: 15px;
   z-index: 100;
 }
 
