--- a/sass/components/_mobil-menu.scss
+++ b/sass/components/_mobil-menu.scss
@@ -1,3 +1,8 @@
+.box-mobile-menu {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .mobile-menu {
   position: fixed;
   top: 0;
@@ -15,17 +20,23 @@
   }
 }
 
-.mobile-site-nav {
+.mobile-site-nav__item:not(:last-child) {
+  padding-bottom: 32px;
+}
+
+.mobile-menu__link {
   font-weight: 500;
   font-size: 40px;
   line-height: 1.17px;
   letter-spacing: 0.02em;
   color: var(--title-text-color);
-
-  .mobile-site-nav__item:not(:last-child) {
-    padding-bottom: 32px;
-  }
 }
+
+.mobile-menu__link:hover,
+.mobile-menu__link:focus {
+  color: var(--accent-color);
+}
+
 .mobile-contact {
   margin-top: auto;
   margin-bottom: 64px;
@@ -91,9 +102,6 @@
   cursor: pointer;
   margin: 0;
   padding: 0;
-  position: fixed;
-  top: 10px;
-  right: 15px;
   z-index: 100;
 
   &.is-open {
