--- a/css/main.css
+++ b/css/main.css
@@ -557,8 +557,10 @@ img {
   }
 }
 
-.contact__item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 1200px) {
+  .contact__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .contact__link {
@@ -883,7 +885,7 @@ img {
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .advantage__item:not(:last-child) {
     margin-bottom: 30px;
   }
@@ -899,7 +901,7 @@ img {
   margin-bottom: 10px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .advantage__title {
     text-align: center;
   }
@@ -1328,6 +1330,10 @@ img {
   flex-basis: 100%;
 }
 
+.portfolio__item:not(:first-child) {
+  margin-top: 30px;
+}
+
 @media screen and (min-width: 768px) {
   .portfolio__item {
     margin-left: 30px;
@@ -1342,10 +1348,6 @@ img {
     margin-top: 30px;
     flex-basis: calc((100% - 3 * 30px) / 3);
   }
-}
-
-.portfolio__item:not(:last-child) {
-  margin-bottom: 30px;
 }
 
 .portfolio__link {
