--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -8,7 +8,9 @@
   }
 }
 .contact__item:not(:last-child) {
-  margin-right: 50px;
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+  }
 }
 .contact__link {
   color: var(--primary-text-color);
